# SABS-Pharmokinetics-Project

./: .coveragerc  Demo.py  README.md  config.json  configDemo.py  example_configurable_directory.json  example_configurable_model.py  example_flow.py  example_single_run.py  modelConfig.json  prototypePkmodel copy.py  prototypePkmodel.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Lint  Lint.yml  ci-unittests.yml  coverage.yml
docs/source/: conf.py  index.rst  install.rst  license.rst  modules.rst  parameters_modules.rst  support.rst
example/: exampleIV.csv  exampleSub.csv  iv_scipy.csv  sub_scipy.csv
examples/: example_configurable_directory.json  example_configurable_model.py  example_single_run.py  example_single_run_breakdown.py
examples/data/: exampleIV.csv  exampleSub.csv  iv_scipy.csv  run1.csv  run2.csv  sub_scipy.csv
pk_model/: Block_pulse_dose.py  abstractPlotter.py  dataCollector_factory.py  model_factory.py  parameters_factory.py  params.json  params.txt
pk_model/dataCollectors/: dataCollector_numpy.py
pk_model/models/: iv_model_ncompt_scipy.py  iv_model_scipy.py  sub_model_bckEuler.py  sub_model_scipy.py
pk_model/parameters/: iv_nCompartment_parameters.py  (+2 more)
pkmodel/: Block_pulse_dose.py  __init__.py  abstractDataCollector.py  abstractModel.py  abstractParameters.py  abstractPlotter.py  api.py  data_collector.py  data_numpy_array.py  model.py  model_factory.py  parameters.py  parameters_factory.py  parameters_iv.py  parameters_sub.py  params.json  params.txt  plotFromCSV.py  plotter_factory.py  protocol.py  solution.py
(+37 files in other folders)
