[tool.poetry]
name = "pk-model"
version = "0.1.5"
description = "Basic Pharmokinetic Model"
authors = ["Kit Gallagher <gallagherkit@outlook.com>"]
license = "\"MIT\""

[tool.poetry.dependencies]
python = "^3.8,<3.10"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
scipy = "^1.7.1"
numpy = "~=1.20.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
